src-tauri/src/data/language_group/snapshots/app__data__language_group__tests__lg_deny_set_phoneme_if_nonexistant.snap
---
source: src-tauri/src/data/language_group/tests.rs
expression: lg
---
version: 0.1.0
family_id: 00000000-0000-0000-0000-000000000000
protolangs:
  - name: "1"
    phonemes:
      00000000-0000-0000-0000-000000000000:
        ortho: ""
        primary: "Null"
        allo: []
    description: ~
langs:
  - name: "1"
    phonemes:
      00000000-0000-0000-0000-000000000000:
        ortho: ""
        primary: "Null"
        allo: []
    description: ~
    ancestors:
      - "1"
    dialects: ~
    standard_dialect: ~

