src-tauri/src/data/language_group/snapshots/app__data__language_group__tests__merge_removes_nonexistant_ancestors.snap
---
source: src-tauri/src/data/language_group/tests.rs
expression: "{ let mut pre = pre.clone(); pre.merge(&post_a); pre }"
---
version: 0.1.0
family_id: 00000000-0000-0000-0000-000000000000
protolangs:
  - name: "1"
    phonemes: {}
    description: ~
langs:
  - name: "2"
    phonemes: {}
    description: ~
    ancestors: []
    dialects: ~

